Login page buttons and lines
- sign button
- register button
-lines

--- a/src/app/login-page/login-page.page.html
+++ b/src/app/login-page/login-page.page.html
@@ -1,3 +1,12 @@
 <ion-toolbar>
   <ion-title size="large">Web Dristi</ion-title>
 </ion-toolbar>
+
+
+
+  
+  <ion-button class="btn-reg" expand="block" >Register</ion-button>
+  <div class="line-login-one"> ________________</div> <div class="or-login">or</div><div class="line-login-two"> _______________</div>
+  <ion-text class="text-login" color="dark"><h5>Already a user ?</h5></ion-text>
+  <ion-button class ="btn-sign" expand="block" color="danger" >Sign In</ion-button>
+  
