UI of login screen responsive

--- a/src/app/login-page/login-page.page.html
+++ b/src/app/login-page/login-page.page.html
@@ -1,12 +1,30 @@
-<ion-toolbar>
-  <ion-title size="large">Web Dristi</ion-title>
-</ion-toolbar>
-
-
-
+<div class="login-title">
   
-  <ion-button class="btn-reg" expand="block" >Register</ion-button>
-  <div class="line-login-one"> ________________</div> <div class="or-login">or</div><div class="line-login-two"> _______________</div>
-  <ion-text class="text-login" color="dark"><h5>Already a user ?</h5></ion-text>
-  <ion-button class ="btn-sign" expand="block" color="danger" >Sign In</ion-button>
+  <div class="img-login"> 
+    <center><img src="../assets/img/Logotrans.png"></center>
+  </div>
+  <div class="img-title"> 
+    <center><img src="../assets/img/titletrans.png"></center>
+  </div>  
+</div>
+
+<ion-content class="auth-form">
   
+  <ion-grid>
+    <ion-row >
+      <ion-col align-self-center>
+       
+          <center><ion-button shape="round" class="btn-regis" [routerLink]="['/registration']" expand="block" color="primary">Sign Up</ion-button></center>
+      
+          <center>  <span class="divider line one-line">or</span></center>
+
+            <span class="already">Already a user?</span>
+
+          <center> <ion-button shape="round" class="btn-sigin" [routerLink]="['/login']" expand="block" color="danger">Log In</ion-button></center>
+
+      
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+
+</ion-content>
