UI responsive for login , sign in , register and forget password

--- a/src/app/forgotpassword-page/forgotpassword-page.page.html
+++ b/src/app/forgotpassword-page/forgotpassword-page.page.html
@@ -3,26 +3,36 @@
     <ion-buttons slot="start">
       <ion-back-button></ion-back-button>
     </ion-buttons>
-    <ion-title>Reset Your Password</ion-title>
+    <ion-text>Reset Your Password</ion-text>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <form>
-    <ion-item lines="full">
-      <ion-label position="floating">Email</ion-label>
-      <ion-input type="email" required></ion-input>
+
+<div class="full-component">
+  <div class="forget-password-title">
+    <ion-list>
+    <ion-item lines="none">
+    <ion-title >Reset Password Here</ion-title>
     </ion-item>
+    </ion-list>
+  </div>
+  <form>
+    <ion-list>
 
-    <ion-row>
-      <ion-col>
-        <ion-button type="submit" color="danger" expand="block">Send</ion-button>
-      </ion-col>
-    </ion-row>
+      <ion-item lines="full">
+        <ion-label position="floating">Email</ion-label>
+        <ion-input type="email" required></ion-input>
+      </ion-item>
 
-    <small>
-      Please provide the username or email address that you used when you signed
-      up for your Evernote account.
-    </small>
+          <br>
+          <ion-button type="submit" color="danger" expand="block">Send</ion-button>
+     
+      <br> 
+      <small>
+        Please provide the email address that you used when you signed up.
+      </small>
+    </ion-list>
   </form>
+</div>
 </ion-content>
