--- a/src/app/register-page/register-page.page.html
+++ b/src/app/register-page/register-page.page.html
@@ -3,46 +3,58 @@
     <ion-buttons slot="start">
       <ion-back-button></ion-back-button>
     </ion-buttons>
-    <ion-title>Register</ion-title>
+    <ion-text>Register</ion-text>
   </ion-toolbar>
 </ion-header>
 
-<div class="regis-title">
-<ion-list>
-<ion-item lines="none">
-<ion-title >Create your account</ion-title>
-</ion-item>
-</ion-list>
-</div>
 
-<ion-content>
-<div class="register-fileds">
-  
-  <form>
-    <ion-list>
-    <ion-item lines="full">
-      <ion-label position="floating">First name</ion-label>
-      <ion-input type="text" required></ion-input>
-    </ion-item>
-
-    <ion-item lines="full">
-      <ion-label position="floating">Last name</ion-label>
-      <ion-input type="text" required></ion-input>
-    </ion-item>
-
-    <ion-item lines="full">
-      <ion-label position="floating">Email</ion-label>
-      <ion-input type="text" required></ion-input>
-    </ion-item>
-
-    <ion-item lines="full">
-      <ion-label position="floating">Password</ion-label>
-      <ion-input type="password" required></ion-input>
-    </ion-item>
 
     
-    <ion-button type="submit" color="danger" expand="block">Sign Up</ion-button>
-  </ion-list>   
-  </form>
-</div>
-</ion-content>
+
+  <ion-content>
+  
+  
+
+      <div class="full-component">
+
+                <div class="regis-title">
+                  <ion-list>
+                  <ion-item lines="none">
+                  <ion-title >Create Your Account</ion-title>
+                  </ion-item>
+                  </ion-list>
+                </div>
+
+              
+              <div class="register-fileds">
+                
+                <form>
+                  <ion-list>
+                  <ion-item lines="full">
+                    <ion-label position="floating">First name</ion-label>
+                    <ion-input type="text" required></ion-input>
+                  </ion-item>
+
+                  <ion-item lines="full">
+                    <ion-label position="floating">Last name</ion-label>
+                    <ion-input type="text" required></ion-input>
+                  </ion-item>
+
+                  <ion-item lines="full">
+                    <ion-label position="floating">Email</ion-label>
+                    <ion-input type="text" required></ion-input>
+                  </ion-item>
+
+                  <ion-item lines="full">
+                    <ion-label position="floating">Password</ion-label>
+                    <ion-input type="password" required></ion-input>
+                  </ion-item>
+
+                  
+                  <ion-button type="submit" color="danger" expand="block">Sign Up</ion-button>
+                </ion-list>   
+                </form>
+              </div>
+        </div>
+    
+    </ion-content>
