--- a/src/app/signin-page/signin-page.page.html
+++ b/src/app/signin-page/signin-page.page.html
@@ -23,16 +23,16 @@
    <ion-list>
     <ion-item lines="full">
       <ion-label position="floating">Email</ion-label>
-      <ion-input type="text" required></ion-input>
+      <ion-input type="text" required #email></ion-input>
     </ion-item>
 
     <ion-item lines="full">
       <ion-label position="floating">Password</ion-label>
-      <ion-input type="password" required></ion-input>
+      <ion-input type="password" required #pass></ion-input>
     </ion-item>
 
         <br>
-        <ion-button type="submit" color="danger" expand="block">Log In</ion-button>
+        <ion-button type="submit" (click)="logIn(email, pass)" color="danger" expand="block" >Log In</ion-button>
         <br>
         <a [routerLink]="['/forgotpassword-page']" class="small-text">Forgot Password?</a>
   </ion-list>
