--- a/src/app/forgotpassword-page/forgotpassword-page.page.html
+++ b/src/app/forgotpassword-page/forgotpassword-page.page.html
@@ -22,11 +22,11 @@
 
       <ion-item lines="full">
         <ion-label position="floating">Email</ion-label>
-        <ion-input type="email" required></ion-input>
+        <ion-input type="email" required #email></ion-input>
       </ion-item>
 
           <br>
-          <ion-button type="submit" color="danger" expand="block">Send</ion-button>
+          <ion-button type="submit" color="danger" expand="block" (click)="passwordReset(email)">Send</ion-button>
      
       <br> 
       <small>
