Dashboard and forget password back page

--- a/src/app/dashboard-page/dashboard-page.page.scss
+++ b/src/app/dashboard-page/dashboard-page.page.scss
@@ -7,10 +7,12 @@
     align-items: center;
 }
 
-ion-icon{
+.dash-icon{
     font-size: 40px;
     padding:0px;
     margin:0px;
+    position: relative;
+    top:12px;
 }
 
 
