--- a/src/app/dashboard-page/dashboard-page.page.html
+++ b/src/app/dashboard-page/dashboard-page.page.html
@@ -1,6 +1,7 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Dashboard</ion-title>
+    <ion-title slot="start">Dashboard</ion-title>
+    <ion-title (click)="Signout()" slot="end" color="primary">Sign Out</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -15,19 +16,19 @@
       </ion-avatar>
        
       <h4>Welcome</h4>
-      <h4>XX</h4>
+      <h4>{{name}}</h4>
 
       <ion-grid>
          <ion-row>
             <ion-col col-6>
-                <ion-card text-center  color="danger">
-                  <ion-icon name="add-circle"></ion-icon>
+                <ion-card text-center  color="tertiary">
+                  <ion-icon class="dash-icon" name="add-circle"></ion-icon>
                   <h6>Create Room</h6>
                 </ion-card>
             </ion-col>
             <ion-col col-6>
-                <ion-card text-center color="danger">
-                  <ion-icon name="person-add"></ion-icon>
+                <ion-card text-center color="tertiary">
+                  <ion-icon class="dash-icon" name="person-add"></ion-icon>
                   <h6>Join Room</h6>
                 </ion-card>
             </ion-col>
@@ -36,21 +37,21 @@
            <ion-row>
               <ion-col col-6>
                 <ion-card text-center  color="danger">
-                  <ion-icon name="calendar"></ion-icon>
+                  <ion-icon class="dash-icon" name="calendar"></ion-icon>
                   <h6>Schedule</h6>
                 </ion-card>
             </ion-col>
             <ion-col col-6>
               <ion-card text-center  color="danger">
-                <ion-icon name="settings" ></ion-icon>
+                <ion-icon  class="dash-icon"name="settings" ></ion-icon>
                 <h6>Settings</h6>
               </ion-card>
             </ion-col>
           </ion-row>
           <ion-row>
             <ion-col col-6>
-              <ion-card text-center  color="danger">
-                <ion-icon name="share"></ion-icon>
+              <ion-card text-center  color="tertiary">
+                <ion-icon  class="dash-icon" name="share"></ion-icon>
                 <h6>Share Screen</h6>
               </ion-card>
             </ion-col>
