Join room, create room , resolved login issue or click with ionic tabls
- add new component ionic cards

--- a/src/app/create-room/create-room.page.html
+++ b/src/app/create-room/create-room.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-back-button text=""></ion-back-button>
+      <ion-back-button ></ion-back-button>
     <ion-title>Create Room</ion-title>
   </ion-buttons>
   </ion-toolbar>
@@ -17,7 +17,7 @@
     <ion-list>
      <ion-item lines="full">
        <ion-label position="floating">Room ID</ion-label>
-       <ion-input type="text" required #room_id></ion-input>
+       <ion-input type="text" required #createRoom_Id></ion-input>
      </ion-item>
      <ion-item lines="full">
       <ion-label position="floating">Name</ion-label>
