--- a/src/app/join-room/join-room.page.html
+++ b/src/app/join-room/join-room.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-back-button text=""></ion-back-button>
+      <ion-back-button></ion-back-button>
     </ion-buttons>
     <ion-text>Join Room</ion-text>
   </ion-toolbar>
@@ -23,7 +23,7 @@
       <ion-list>
        <ion-item lines="full">
          <ion-label position="floating">Room ID</ion-label>
-         <ion-input type="text" required #room id></ion-input>
+         <ion-input type="text" required #joinRoom_Id></ion-input>
        </ion-item>
          <br>
          <ion-button type="submit" color="tertiary" expand="block" >Join</ion-button>
